chore(/*)[]: rename imports due to appError rename
`apperror` rename to `appError`
